@@ -648,7 +648,8 @@ struct allowlist {
 struct irec {
   union mysockaddr addr;
   struct in_addr netmask; /* only valid for IPv4 */
-  int tftp_ok, dhcp_ok, mtu, done, warned, dad, dns_auth, index, multicast_done, found, label;
+  int tftp_ok, dhcp4_ok, dhcp6_ok, mtu, done, warned, dad;
+  int dns_auth, index, multicast_done, found, label;
   char *name; 
   struct irec *next;
 };
@@ -669,6 +670,8 @@ struct iname {
 };
 
 #define  INAME_USED  1
+#define  INAME_4     2
+#define  INAME_6     4
 
 struct rrlist {
   unsigned short rr;
